Added tool_export split by portal/autocomplete columns improvements

--- a/lib/dedalo/tools/tool_export/css/tool_export.less
+++ b/lib/dedalo/tools/tool_export/css/tool_export.less
@@ -8,30 +8,58 @@
 
 /* TABLE_CSV
 ----------------------------------------- */
-.table_csv {
-	background-color: #C9EDB8;
-	font-family: Arial, sans-serif;
-	font-size: 12px;
-	width: 100%;
-	table-layout: fixed;
-	}
-	.table_csv tr {
+	table.table_csv {
+		background-color: #C9EDB8;
+		font-family: Arial, sans-serif;
+		font-size: 12px;
+		width: 100%;
+		table-layout: fixed;
 
-	}	
-	.table_csv td, .table_csv th {
-		display: table-cell;
-		max-height: 50px;
-		overflow: auto;
-		background-color: #F5F5F5;
-		padding: 2px;
-		overflow-wrap: break-word;
-		border: 1px solid rgb(255, 255, 255);
-		padding-left: 0.4em;
-	}
-	.table_csv th {
-		background-color: #E2E2E2;
-	}
+		caption {
+			background-color: #F0F0F0
+		}
+	
+		tr {
 
+			>th, >td {
+				display: table-cell;
+				max-height: 50px;
+				overflow: auto;				
+				padding: 2px;
+				padding-left: 0.4em;
+				overflow-wrap: break-word;
+				border: 1px solid rgb(255, 255, 255);
+			}
+
+			>th {
+				background-color: #E2E2E2;
+				vertical-align: text-top;
+				border-bottom: 1px solid #eeeeee;
+			}
+
+			>td {
+				background-color: #F5F5F5;
+				border-bottom: 1px solid #eeeeee;
+
+				img {
+					height: 57px;
+					width: auto;
+				}
+			}
+
+			&:nth-child(even) {
+
+				>td {
+					background-color: #f9f9f9;
+				}				
+			}
+			
+		}
+		
+	}//end .table_csv
+		
+	
+	
 
 
 
@@ -42,7 +70,7 @@
 	/*background-color: #F1EA67;*/
 	width: 100%;
 	display: table;
-	margin-left: 40px;
+	padding-left: 40px;
 	margin-bottom: 65px;
 	}
 	.col {
@@ -208,18 +236,14 @@
 
 	}//end #download_file
 		
-		
-		
-
-	
-		
-		
+			
 
 
 	/* TABLE_DATA_PREVIEW
 	----------------------------------------- */
 	#table_data_preview {
 		clear: both;
+		margin-bottom: 40px;
 		}
 		#table_data_preview:before {
 			content: " ";
@@ -230,15 +254,33 @@
 
 
 
+// content_html
+	.content_html {		
+		width: 100%;
+		height: 100vh;
+		display: block;		
+	}	
+
+
+// tool_title
+	.tool_title {
+		margin: 0;
+		padding: 40px;
+	}
+
 
 
 // print
 	@media print {    
-    .no-print, .no-print *
-    {
-        display: none !important;
-    }
-}
+	    .no-print, .no-print *
+	    {
+	        display: none !important;
+	    }
+	    #table_data_preview {
+	    	margin: 0;
+	    	padding: 0;
+	    }
+	}
 
 
 
