--- a/lib/dedalo/tools/tool_export/css/tool_export.less
+++ b/lib/dedalo/tools/tool_export/css/tool_export.less
@@ -53,7 +53,7 @@
 					background-color: #f9f9f9;
 				}				
 			}
-			
+
 		}
 		
 	}//end .table_csv
@@ -116,6 +116,10 @@
 		/*min-width: 250px;*/
 		padding: 10px;
 		height: 100%;
+		//padding-bottom: 0;
+		//margin-bottom: 0;
+		//display: grid;
+
 	}
 	#wrap_columns_selector li {
 		min-width: 250px;
