--- a/lib/dedalo/component_calculation/html/component_calculation_list.phtml
+++ b/lib/dedalo/component_calculation/html/component_calculation_list.phtml
@@ -15,7 +15,7 @@
 		case ($permissions>=1)	:
 			
 				#$html_contenido .= "<span class=\"css_span_dato\">$valor</span>";
-				$html_contenido .= json_encode($valor);
+				$html_contenido .= json_encode($valor, JSON_NUMERIC_CHECK);
 				break;							
 	}	
 
