Clean area_thesaurus code and fix issue where is not showed the thesaurus type selector in search form

--- a/lib/dedalo/search/css/search.less
+++ b/lib/dedalo/search/css/search.less
@@ -954,7 +954,7 @@
 		//margin-left:20px;
 		//background-color:antiquewhite;
 		margin-top: 7px;
-		display: none;
+		//display: none;
 		}
 		#thesaurus_search_selector > ul {
 			display: flex;
