--- a/lib/dedalo/component_portal/css/component_portal.less
+++ b/lib/dedalo/component_portal/css/component_portal.less
@@ -682,7 +682,8 @@
 
 		.css_wrap_image_portal_list_view_mosaic,
 		.css_wrap_image_portal_list_view_mosaic .content_data,
-		.div_image_portal_list_view_mosaic
+		.div_image_portal_list_view_mosaic,
+		.css_wrap_image_portal_list_view_mosaic
 		 {
 			display: table;
 			width: 100%;
