--- a/lib/dedalo/tools/tool_transcription/css/tool_transcription.less
+++ b/lib/dedalo/tools/tool_transcription/css/tool_transcription.less
@@ -133,6 +133,21 @@
 		right:0;
 		z-index: 2000;
 		opacity: .8;
+
+		
+	}
+
+
+	#inspector_log {
+		width: auto;
+		max-width: 50%;
+		min-height: 2.5em;
+		//background-color: #77FDDB;
+
+		-webkit-user-select: none;  /* Chrome all / Safari all */
+		-moz-user-select: none;     /* Firefox all */
+		-ms-user-select: none;      /* IE 10+ */
+		user-select: none;          /* Likely future */  
 	}
 
 
