--- a/lib/dedalo/tools/tool_transcription/html/tool_transcription_page.phtml
+++ b/lib/dedalo/tools/tool_transcription/html/tool_transcription_page.phtml
@@ -207,7 +207,7 @@
 	# INSPECTOR LOG tool_transcription 
 	#$html 	.= "<div id=\"inspector_log\" class=\"tool_transcription_inspector_log\"> </div>";
 	# INSPECTOR LOG TOOL_LANG ()
-	$html 	.= "<div id=\"inspector_log\" class=\"tool_inspector_log\"> </div>";
+	$html 	.= '<div id="inspector_log" class="tool_inspector_log"></div>';
 
 
 
