Test of Sublime merge tool

--- a/lib/dedalo/area_admin/html/area_admin_list.phtml
+++ b/lib/dedalo/area_admin/html/area_admin_list.phtml
@@ -3,7 +3,7 @@
 	# VISUALIZADOR HTML		
 	
 	
-	print "<!-- AREA [tipo:$tipo] -->";
+	print '<!-- AREA [tipo:'.$tipo.'] -->';
 
 	print "<div class=\"css_wrap_area css_wrap_area_activity\" > ";
 	
