Solve drop and childres arrow upte issues in thesaurus showed in tool_cataloging

--- a/lib/dedalo/tools/tool_cataloging/css/tool_cataloging.less
+++ b/lib/dedalo/tools/tool_cataloging/css/tool_cataloging.less
@@ -333,5 +333,10 @@ body {
 		}
 	}
 
+// remove border on components showed in thesaurus
+	.wrap_ts_object .data_container .wrap_component {
+		border: none !important;
+	}
+
 	
 
