Minor clean code

--- a/lib/dedalo/tools/tool_export/html/tool_export_columns.phtml
+++ b/lib/dedalo/tools/tool_export/html/tool_export_columns.phtml
@@ -126,7 +126,7 @@ $html='';
 
 
 	// download_file
-		$html .= "<div id=\"download_file\" class=\"no-print\">";
+		$html .= '<div id="download_file" class="no-print">';
 	
 		// download_file csv utf-8
 			#$html .= "	<h2><a href=\"\" target=\"_blank\" id=\"download_file_link\">".label::get_label("descargar")." CSV</a></h2>";
@@ -139,7 +139,7 @@ $html='';
 		// print
 			$html .= '<a id="print_button" class="btn btn-success fileinput-button" onclick="window.print()"><strong>'.label::get_label("imprimir").'</strong></a>';
 	
-	$html .= "</div>";
+	$html .= '</div>';
 
 
 
