--- a/lib/dedalo/tools/tool_cataloging/css/tool_cataloging.less
+++ b/lib/dedalo/tools/tool_cataloging/css/tool_cataloging.less
@@ -167,6 +167,12 @@ body {
 	}
 
 
+// row_container
+	.row_container {
+
+	}
+
+
 // rows_container
 	.rows_container._numisdata3 {
 
@@ -279,7 +285,7 @@ body {
 			width: @down_width;
 		}
 		#button_submit {
-			width: @down_width;
+			width: @down_width - 0.5;
 			margin-right: 5px;
 		}
 	}
@@ -339,4 +345,24 @@ body {
 	}
 
 	
+// row_used
+	.row_used {
+		transition: all 1s ease;
+		//transition: opacity 1s ease;
+		background-color: #ff9b00;
+    	opacity: 0.8 !important;
 
+		/*
+		&:after {
+			content: " ";
+			background-color: #ec8a0a;
+			color: #fff;
+			position: absolute;
+			right: 0;
+			top: 0;
+			width: 29px;
+			text-align: center;
+			height: 2em;
+			line-height: 2em;
+		}*/
+	}
