--- a/lib/dedalo/component_autocomplete_hi/css/component_autocomplete_hi.less
+++ b/lib/dedalo/component_autocomplete_hi/css/component_autocomplete_hi.less
@@ -236,5 +236,25 @@
 	}
 
 	
+// btn edit section
+	.edit_autocomplete_hi {
+		background-position: 0 -72px;
+		opacity: 0.3;
+		margin-left: 3px;
+	}
+// btn edit row
+	.edit_autocomplete_hi_row {
+		//top: 1px;
+	    //left: 5px;
 
+		top: 1px;
+		/* margin-left: 5px; */
+		/* position: relative; */
+		/* width: 23px; */
+		/* left: 0; */
+		margin: 0;
+		padding: 0;
+		min-width: 15px;
+		margin-left: 5px;
+	}
 
