Minor code clean

--- a/lib/dedalo/component_text_area/css/component_text_area.less
+++ b/lib/dedalo/component_text_area/css/component_text_area.less
@@ -664,3 +664,27 @@ div.mce-tinymce.mce-fullscreen {
 	.css_wrap_text_area_portal_list > .component_tools_container span {
 		display: none
 	}
+
+
+
+// test for tiny height to 100%
+	/*
+	.css_wrap_text_area {
+		
+		.mce-tinymce.mce-container.mce-panel, .mce-stack-layout, .mce-edit-area {
+	        display: flex !important;
+	        flex-direction: column;
+	        flex: 1;
+	        align-items: stretch;
+	        //height: 97%;
+	        //height: 96.8%;
+		}
+		.mce-tinymce.mce-container.mce-panel {
+			//height: 96.8%;
+			height: 100%;
+		}
+		.mce-tinymce iframe {
+			flex: 1;
+		}
+	}
+	*/
