--- a/lib/dedalo/component_html_text/css/component_html_text.less
+++ b/lib/dedalo/component_html_text/css/component_html_text.less
@@ -129,3 +129,25 @@
 }
 
 
+
+// test for tiny height to 100%
+	/**/
+	.css_wrap_html_text {
+		
+		.mce-tinymce.mce-container.mce-panel, .mce-stack-layout, .mce-edit-area {
+	        display: flex !important;
+	        flex-direction: column;
+	        flex: 1;
+	        align-items: stretch;
+	        //height: 97%;
+	        //height: 96.8%;
+		}
+		.mce-tinymce.mce-container.mce-panel {
+			height: 96.8%;
+		}
+		.mce-tinymce iframe {
+			flex: 1;
+		}
+	}
+	
+
