--- a/lib/dedalo/tools/tool_indexation/css/tool_indexation.less
+++ b/lib/dedalo/tools/tool_indexation/css/tool_indexation.less
@@ -299,3 +299,15 @@ li.tool_indexation_index_list_termino {
 .lang_info_debug {
 	top: -8px;
 }
+
+
+
+// indexation_page_text
+	#indexation_page_text {
+
+		>.css_wrap_text_area {
+			height: 97.6%;
+		}
+	}
+
+
