Fixed error when tool_export shows only first portal column section_id

--- a/lib/dedalo/tools/tool_export/css/tool_export.less
+++ b/lib/dedalo/tools/tool_export/css/tool_export.less
@@ -47,6 +47,7 @@
 			>td {
 				background-color: #F5F5F5;
 				border-bottom: 1px solid #eeeeee;
+				vertical-align: top;
 
 				img {
 					height: 57px;
