Removed CSS overflow of component_portal content_data

--- a/lib/dedalo/component_portal/css/component_portal.less
+++ b/lib/dedalo/component_portal/css/component_portal.less
@@ -21,7 +21,7 @@
 			//top: -25px;
 			//margin-bottom: -20px;		
 			//background-color: #edbff5;  
-			overflow: auto;
+			//overflow: auto;
 		}
 
 		// hide main label (> first label only)
