--- a/lib/dedalo/component_relation_model/html/component_relation_model_edit.phtml
+++ b/lib/dedalo/component_relation_model/html/component_relation_model_edit.phtml
@@ -35,48 +35,57 @@
 
 		case 2 :
 		case 3 :
-
 				#
 				# CONTEXT
 				# Set as disabled on time machine context 
 				$disabled = (isset($context->context_name) && $context->context_name==='tool_time_machine') ? 'disabled="disabled"' : '';
 
-				$html_content .= "<select class=\"css_relation_model\" ";
-				$html_content .= "onchange=\"component_relation_model.Save(this)\" ";
-				$html_content .= "onfocus=\"component_common.select_wrap(null,'$id_wrapper');\" ";
-				$html_content .= "name=\"{$input_name}\" ";
-				$html_content .= "data-tipo=\"{$tipo}\" ";
-				$html_content .= "data-lang=\"{$lang}\" ";
-				$html_content .= "data-section_tipo=\"{$section_tipo}\" ";
-				$html_content .= "data-parent=\"{$parent}\" ";
-				$html_content .= "title=\"$html_title\" ";
-				$html_content .= "$disabled ";
-				$html_content .= "tabindex=\"1\" ";
-				$html_content .= "> ";
+				if(isset($ar_list_of_values->result)){
 
-				$selected = empty($dato) ? 'selected' : '';
-				
-				$html_content .= " <option value=\"\" {$selected}> </option>";
+					$html_content .= "<select class=\"css_relation_model\" ";
+					$html_content .= "onchange=\"component_relation_model.Save(this)\" ";
+					$html_content .= "onfocus=\"component_common.select_wrap(null,'$id_wrapper');\" ";
+					$html_content .= "name=\"{$input_name}\" ";
+					$html_content .= "data-tipo=\"{$tipo}\" ";
+					$html_content .= "data-lang=\"{$lang}\" ";
+					$html_content .= "data-section_tipo=\"{$section_tipo}\" ";
+					$html_content .= "data-parent=\"{$parent}\" ";
+					$html_content .= "title=\"$html_title\" ";
+					$html_content .= "$disabled ";
+					$html_content .= "tabindex=\"1\" ";
+					$html_content .= "> ";
 
-				foreach ($ar_list_of_values->result as $key => $item) {
-
-					$label   = (string)$item->label;
-					$locator = (object)$item->value;
-
-					# Add fixed type
-					$locator->type = DEDALO_RELATION_TYPE_MODEL_TIPO;
-
-					$founded  = locator::in_array_locator( $locator, $ar_locator=$dato, $ar_properties=array('section_id','section_tipo','type') );
-					$selected = $founded ? 'selected' : '';
-
-					$locator_json = json_encode($locator);
-
-					$html_content .= "<option value='". $locator_json ."' {$selected}>";
-					$html_content .= $label;					
+					$selected = empty($dato) ? 'selected' : '';
 					
-					$html_content .= "</option>";
-				}
-				$html_content .= " </select>";
+					$html_content .= '<option value="" '.$selected.'> </option>';
+
+					foreach ($ar_list_of_values->result as $key => $item) {
+
+						$label   = (string)$item->label;
+						$locator = (object)$item->value;
+
+						# Add fixed type
+						$locator->type = DEDALO_RELATION_TYPE_MODEL_TIPO;
+
+						$founded  = locator::in_array_locator( $locator, $ar_locator=$dato, $ar_properties=array('section_id','section_tipo','type') );
+						$selected = $founded ? 'selected' : '';
+
+						$locator_json = json_encode($locator);
+
+						$html_content .= "<option value='". $locator_json ."' {$selected}>";
+						$html_content .= $label;
+						
+						$html_content .= '</option>';
+					}
+					$html_content .= '</select>';
+
+				}else{
+
+					// user notification
+						if (!isset($ar_list_of_values->result)) {
+							$html_content .= '<span>Empty model options ('.$referenced_tipo.')</span>';
+						}
+				}				
 
 
 				if(SHOW_DEBUG===true) {
@@ -113,10 +122,9 @@
 	#	echo $ar_list_of_values->debug;
 	#}
 
-	print "</div>"; //wrap
+	print '</div>'; //wrap
 
 	# html_delimiter
 	print component_common_draw::html_delimiter($component_name, $tipo, $parent, $label, 'out');
 
 	
-?>
