Added publication (diffusion) info data to section. First publication date and user and last publication date and user

--- a/lib/dedalo/inspector/css/inspector.less
+++ b/lib/dedalo/inspector/css/inspector.less
@@ -252,6 +252,11 @@
 	overflow: auto;
 }
 
+#inspector_info {
+	display: grid;
+	grid-template-columns: auto 3fr;
+}
+
 .label_lang_data_selector {
 	display: inline-block;
 	margin-right: 5px;
