Removed duplicated section_info data in section wrapper

--- a/lib/dedalo/section/html/section_edit.phtml
+++ b/lib/dedalo/section/html/section_edit.phtml
@@ -16,7 +16,7 @@
 	print "data-component_name=\"{$component_name}\" ";
 	print "data-section_id=\"{$section_id}\" ";
 	print "data-label=\"{$label}\" ";
-	print "data-section_info='{$section_info}' ";
+	#print "data-section_info='{$section_info}' ";
 	print ">";
 
 
