--- a/lib/dedalo/tools/tool_diffusion/css/tool_diffusion.less
+++ b/lib/dedalo/tools/tool_diffusion/css/tool_diffusion.less
@@ -5,18 +5,21 @@
 @import "@{common_css}/library.less";
 
 
+// diffusion_group
+	.diffusion_group {
+		padding: 0;
+		
+		ul {			
+			padding-left: 10px;
 
-.diffusion_group {
-	padding: 0;
-	}
-	.diffusion_group ul {
-		/*padding-left: 23px;*/
-		padding-left: 10px;
-	}
-	.diffusion_group ul li {		
-		display: inline-block;
-		padding-right: 10px;
-	}
+			>li {		
+				display: inline-block;
+				padding-right: 10px;
+			}
+		}
+
+	}	
+	
 
 	.diffusion_group_name {
 		padding-left: 5px;
